# python-project-83

./: .gitignore  README.md  database.sql  makefile  pyproject.toml
.github/workflows/: flake8.yml
page_analyzer/: app.py  db_logic.py
page_analyzer/templates/: alert.html  base.html  index.html  url.html  urls.html
