[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Third project performed as part of the Hexlet Python Course"
authors = ["ggByron"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = ">3.8.1"
gunicorn = ">20.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
